refactor: Rewrite tests to fit Java8
Signed-off-by: Anton Grigorev <anton.grigorev@broadcom.com>