@@ -16,12 +16,11 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /** This use case checks if extra symbols on one line do not cause any errors on the next line. */
 class TestExtraSymbolsNotCauseErrorOnNextLine {
@@ -38,7 +37,7 @@ class TestExtraSymbolsNotCauseErrorOnNextLine {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(),
-        Map.of("1", new Diagnostic(null, MESSAGE, DiagnosticSeverity.Error, SourceInfoLevels.ERROR.getText())));
+        ImmutableList.of(),
+        ImmutableMap.of("1", new Diagnostic(null, MESSAGE, DiagnosticSeverity.Error, SourceInfoLevels.ERROR.getText())));
   }
 }
