@@ -18,11 +18,10 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static org.eclipse.lsp4j.DiagnosticSeverity.Error;
 
@@ -54,7 +53,7 @@ class TestIdentificationDivisionInCopybookWithError {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(IDDIV_NAME, IDDIV), new CobolText(STRUCT1_NAME, STRUCT1)),
-        Map.of("1", new Diagnostic(null, MESSAGE, Error, SourceInfoLevels.ERROR.getText())));
+        ImmutableList.of(new CobolText(IDDIV_NAME, IDDIV), new CobolText(STRUCT1_NAME, STRUCT1)),
+        ImmutableMap.of("1", new Diagnostic(null, MESSAGE, Error, SourceInfoLevels.ERROR.getText())));
   }
 }
