@@ -17,11 +17,10 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static org.eclipse.lsp4j.DiagnosticSeverity.Information;
 
@@ -60,7 +59,7 @@ class TestKeywordAsCopybookNotProducesNPE {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(
+        ImmutableList.of(
             new CobolText(DETAIL_NAME, DETAIL),
             new CobolText("IDENTIFICATION", ""),
             new CobolText("ADATA", ""),
@@ -69,7 +68,7 @@ class TestKeywordAsCopybookNotProducesNPE {
             new CobolText("END", ""),
             new CobolText("NUMERICLITERAL", ""),
             new CobolText("FILENAME", "")),
-        Map.of(
+        ImmutableMap.of(
             "long1",
             new Diagnostic(
                 null,
