@@ -18,11 +18,10 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static org.eclipse.lsp4j.DiagnosticSeverity.Error;
 
@@ -49,8 +48,8 @@ class TestMissingNestedCopybookProducesError {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(REPL_NAME, REPL)),
-        Map.of(
+        ImmutableList.of(new CobolText(REPL_NAME, REPL)),
+        ImmutableMap.of(
             "missing",
             new Diagnostic(
                 null, "CPYNAME: Copybook not found", Error, SourceInfoLevels.ERROR.getText(), "MISSING_COPYBOOK")));
