@@ -18,11 +18,10 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static org.eclipse.lsp4j.DiagnosticSeverity.Error;
 import static org.eclipse.lsp4j.DiagnosticSeverity.Warning;
@@ -54,8 +53,8 @@ class TestMisspelledKeywordWarningInCorrectPosition {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(STRUC1_NAME, STRUC1)),
-        Map.of(
+        ImmutableList.of(new CobolText(STRUC1_NAME, STRUC1)),
+        ImmutableMap.of(
             "misspelled",
             new Diagnostic(
                 null,
