@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * Test replacing for keywords. Here, 'IDENTIFICATION' in the copybook should be replaced with
@@ -45,6 +44,6 @@ class TestReplacingKeywords {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(KEYW_NAME, KEYW)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(KEYW_NAME, KEYW)), ImmutableMap.of());
   }
 }
